# discord-rss

./: Dockerfile  LICENSE.md  README.md  discord-rss.py  main.py  pyproject.toml  requirements.txt  urls.txt
src/discord_rss/: __main__.py  envdefault.py
